--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,26 @@
 * {box-sizing: border-box;}
 
 body {
-    background: url(../images/papyrus.png);
+    margin: 0 auto;
+    height: 90vh;
+    background-size: cover;
+    overflow: hidden;
 }
 
 h2 {
     color: #4aaaa5;
     border-bottom: solid 2px gainsboro;
     padding-bottom: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
-.header {
+.part-one {
     font-family: 'Georgia', Times, Times New Roman, serif;
-    background-color: #ffffff;
-    width: 960px;
+    background-color: #ffffff; 
+    width: 100%;
     height: 100px;
-    margin: 0 auto;
+    border-bottom: solid 2px gainsboro;
 }
 
 header::after {
@@ -24,20 +29,22 @@ header::after {
 
 #my-name {
     float: left;
-    width: 25%;
-    padding-bottom: 22px;
-    padding-top: 22px
+    width: 20%;
+    height: 100px;
+    padding-bottom: 25px;
+    padding-top: 25px;
+    margin-left: 130px;
     text-align: center;
     background-color: #4aaaa5;
     color: white;
-    font-size: 15px;
+    font-size: 12px;
 }
 
 .my-links {
     float: right;
     color: #777777;
-    margin-top: 30px;
-    margin-right: 290px;
+    margin-top: 50px;
+    margin-right: 190px;
     text-decoration: none;
 }
 
@@ -49,39 +56,45 @@ nav a {
 
 .container {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    background: url(../images/floor-tile.png);
     min-height: 100px;
-    width: 960px;
+    align-content: center;
+    padding: 20px;
+    width: 100%;
+    height: 80%;
     float: left;
-    margin-top: 50px;
-    padding-bottom: 100px;    
 }
 
 #main-content,
 #my-image {
     float: left;
     background-color: #ffffff;
+    margin-left: 110px;
+    clear: both;
 }
 
 #main-content {
-    width: 70%;
+    width: 960px;
+    padding: 10px;
     line-height: 1.6;
     color: #777777;
-    overflow: auto;
+}
+
+p {
+    margin-top: 30px;
+    margin-left: 15px;
 }
 
 #my-image {
-    margin-right: 20px;
-    margin-bottom: 20px;
+    margin-top: 30px;
+    margin-left: 0;
 }
 
 #my-footer {
     background-color: #666666;
-    position: relative;
-    height: 100px;
-    margin-top: -100px;
-    padding-top: 55px;
+    padding: 35px;
     text-align: center;
-    color: #ffffff;
+    color: gainsboro;
     border-top: solid 5px #4aaaa5;
     clear: both;
 }
