--- a/assets/css/contact-style.css
+++ b/assets/css/contact-style.css
@@ -2,8 +2,7 @@
 
 
 body {
-    margin: 0 auto;
-    height: 118vh;
+    margin: 0 auto; 
     background-size: cover;
     overflow: hidden;
 }
@@ -12,17 +11,16 @@ body {
     font-family: 'Georgia', Times, Times New Roman, serif;
     background-color: #ffffff; 
     width: 100%;
-    height: 13.5%;
-    border-bottom: solid 2px gainsboro;
+    height: 80px;
+    border-bottom: solid 2px #cccccc;   
 }
 
 
 #my-name {
     float: left;
     width: 20%;
-    height: 90px;
-    padding-bottom: 25px;
-    padding-top: 18px;
+    height: 80px;
+    padding: 10px;
     margin-left: 270px;
     text-align: center;
     background-color: #4aaaa5;
@@ -33,9 +31,14 @@ body {
 .my-links {
     float: right;
     color: #777777;
-    margin-top: 40px;
+    margin-top: 35px;
     margin-right: 275px;
     text-decoration: none;
+}
+
+.clear {
+    clear: both;
+    overflow: auto;
 }
 
 nav a {
@@ -66,6 +69,7 @@ h2 {
     background-color: #ffffff;
     margin: 0 auto;
     color: #777777;
+    border: 2px solid #cccccc;
 }
 
 input[type=text], select {
@@ -88,14 +92,21 @@ input[type=text], select, textarea {
 input[type=submit] {
     color: #ffffff;
     background-color: #4aaaa5;
+    margin-top: 4px;
+    width: 100px;
+    height: 30px;
+}
+
+
+label   {
+    display: inline-block;
+    line-height: 1.5;
 }
 
 #my-footer {
     background-color: #666666;
-    height: 12%;
-    padding: 28px;
+    height: 60px;
     text-align: center;
-    color: gainsboro;
+    color: #ffffff;
     border-top: solid 5px #4aaaa5;
-    clear: both;
 }
